# grorg

./: .env-dist  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  compose.yml  conftest.py  fly.toml  justfile  manage.py  pyproject.toml  requirements.in  requirements.txt  start-dev.sh  tailwind.config.js
.github/workflows/: actions.yml
config/: context_processors.py  settings.py  urls.py  wsgi.py
frontend/: index.css
grants/: admin.py  forms.py  models.py  tests.py
grants/management/commands/: create_sample_applicants.py
grants/migrations/: 0014_alter_score_score_score_score_range_1_to_5.py  0015_applicant_applied_to_speak.py  0016_applicant_rejection_reason_applicant_status_and_more.py  0017_question_filterable.py  0018_set_boolean_questions_filterable.py
grants/tests/: test_forms.py  test_models.py  test_views.py
grants/views/: bulk_load.py  program.py
grorg/: settings.py  urls.py
static/css/: style.css
templates/: 404.html  500.html  _field.html  _form.html  applicant-allocations.html  applicant-view.html  base.html  index.html  join.html  login.html  program-applicants.html  program-apply-success.html  program-apply.html  program-bulk-applicants.html  program-bulk-scores.html  program-create.html  program-edit.html  program-home.html  program-question-edit.html  program-questions.html  program-resource-edit.html  program-resources.html  register.html
templates/account/: base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
templates/socialaccount/: authentication_error.html  login.html  login_cancelled.html  signup.html
users/: admin.py  forms.py  tests.py  views.py
users/tests/: test_models.py
