[project]
dependencies = []
description = "Add your description here"
name = "grorg"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings.test"
# addopts = "--cov=. --durations=1 --nomigrations --reuse-db -vv"
addopts = "--nomigrations --reuse-db -vv"
norecursedirs = ".git config node_modules scss settings static templates"
python_files = "test_*.py"

[tool.ruff]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".github",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "CONTRIBUTORS.md",
  "dist",
  "migrations",
  "node_modules",
  "settings/docker.py",
  "static",
  "venv"
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
ignore = ["E501", "E741"]  # temporary
# Same as Black.
line-length = 120
per-file-ignores = {}
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
# Assume Python 3.9
target-version = "py39"
unfixable = []

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
