[project]
name = "grorg"
version = "2026.1.24"
description = "DjangoCon US Grant Organization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blessed",
    "bumpver",
    "django-allauth",
    "django-health-check",
    "django-q2",
    "django-tailwind-cli",
    "django<6.0",
    "django-prodserver[gunicorn]",
    "environs[django]",
    "psycopg[binary]",
    "model-bakery",
    "pytest",
    "pytest-django",
    "requests",
    "urlman",
    "whitenoise",
]

[tool.bumpver]
commit = true
commit_message = ":bookmark: bump version {old_version} -> {new_version}"
current_version = "2026.1.24"
push = false
tag = true
version_pattern = "YYYY.MM.INC1"

[tool.bumpver.file_patterns]
"config/__init__.py" = [
    '__version__ = "{version}"'
]
"pyproject.toml" = [
    'version = "{version}"'
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
addopts = "--nomigrations --reuse-db"
norecursedirs = ".git* .venv staticfiles templates static"
python_files = ["test_*.py", "tests.py"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".github",
    ".hg",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "migrations",
    "node_modules",
    "static",
]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["A", "B", "C", "D", "E", "F"]
ignore = ["E501", "E741"]
per-file-ignores = {}
select = ["E", "F"]
unfixable = []

[tool.uv]
package = false
